testsuite/tests/module/mod130.stderr

mod130.hs:7:5: error:
    Variable not in scope: (<) :: Integer -> Int -> Int
